--- a/WoWItems.API/appsettings.Development.json
+++ b/WoWItems.API/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "WoWItemsDBConnectionString": "Data Source= (localdb)\\MSSQLLocalDB; Initial Catalog = WoWItemsDatabase"
   }
 }
