Update Delete and create WoWItemsTestRepository

--- a/WoWItems.API/appsettings.json
+++ b/WoWItems.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "WoWItemsDBConnectionString": "Data Source= (localdb)\\MSSQLLocalDB; Initial Catalog = WoWItemsDatabase"
+  },
   "AllowedHosts": "*"
 }
